--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
     background: linear-gradient(180deg, rgba(43,250,244,1) 0%, rgba(15,173,255,1) 76%, rgba(34,161,255,1) 100%);
 }
 .atbkop {
+    animation: pop 1s ease 1 alternate;
     position: relative;
     width: 600px;
     height: 400px;
@@ -24,8 +25,73 @@
     width: 580px;
     height: 380px;
     border-radius: 30px;
-    background: linear-gradient(180deg, rgba(255,108,34,1) 0%, rgba(251,163,55,1) 80%, rgba(251,189,89,1) 100%);
+    background: linear-gradient(180deg, rgba(255,108,34,1) 0%, rgba(251,163,55,1) 90%, rgba(251,189,89,1) 100%);
+}
+.pogukopa {
+    position: absolute;
+    top: 40px;
+    left: 130px;
+    width: 320px;
+    height: 320px;
+    animation: pogaframe-pop 0.45s ease 1 alternate;
+}
+.poga {
+    animation: pop 2s ease 1 alternate;
+    position: relative;
+    float: left;
+    border-radius: 20px;
+    width: 120px;
+    height: 120px;
+    background: radial-gradient(circle, rgba(120,229,255,1) 0%, rgba(62,214,254,1) 100%);
+    margin: 8px;
+    border: 12px solid rgb(1, 194, 253);
+    
+}
+.poga:hover {
+    position: relative;
+    float: left;
+    border-radius: 20px;
+    width: 120px;
+    height: 120px;
+    background: radial-gradient(circle, rgba(120,229,255,1) 0%, rgba(62,214,254,1) 100%);
+    margin: 8px;
+    border: 12px solid rgb(195, 237, 250);
+    
+}
+.piemers {
+    position: absolute;
+    top: -60px;
+    left: 140px;
+    width: 300px;
+    height: 80px;
+    border-radius: 10px;
+    background: rgb(146,63,255);
+    background: linear-gradient(0deg, rgb(219, 102, 255) 0%, rgb(237, 135, 253) 100%);
+    
+}
+
+.inpiemers {
+    position: absolute;
+    top: 8px;
+    left: 10px;
+    width: 280px;
+    height: 64px;
+    border-radius: 10px;
+    background: linear-gradient( 0deg, rgb(232, 129, 248) 0%, rgb(217, 103, 240) 100%);
+    box-shadow: 13px 14px 40px 1px rgba(0,0,0,0.2);
+    
+    
 }
 body {
     background: url(pattern.png);
-    }
+    } 
+
+@keyframes pop {
+    0% {opacity:0%}
+    100% {opacity:100%}
+}
+
+@keyframes pogaborder {
+    0% {border: 12px solid rgb(1, 194, 253)}
+    100% {border: 12px solid rgb(195, 237, 250)}
+}
