--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
     position: relative;
     width: 600px;
     height: 400px;
-    top: 300px;
+    top: 200px;
     left: 400px;
     border-radius: 30px;
     box-shadow: 13px 14px 40px 4px rgba(0,0,0,0.35);
@@ -99,4 +99,16 @@ body {
 @keyframes pogaborder {
     0% {border: 12px solid rgb(1, 194, 253)}
     100% {border: 12px solid rgb(195, 237, 250)}
+}
+.punkti{
+    margin-top: 50px;
+    font-size: 64px;
+    text-align:center;
+    line-height: 1.5em;
+}
+.rekords{
+    margin-top: 50px;
+    font-size: 34px;
+    text-align:right;
+    line-height: 1.5em;
 }
